.kube/muno_admin_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: muno-admin
  name: muno-admin
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: muno-admin
  template:
    metadata:
      labels:
        app: muno-admin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: apps
                    operator: In
                    values:
                      - "true"
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - env:
            - name: PORT
              value: "7077"
            - name: BASE_URL
              valueFrom:
                secretKeyRef:
                  name: muno-admin-secrets
                  key: base_url
          image: gitlab.udevs.io:5050/muno/muno_admin:latest
          name: muno-admin
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: muno-admin
  namespace: microservices
spec:
  ports:
    - port: 80
      targetPort: 7077
  selector:
    app: muno-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muno-admin-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: admin.muno.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muno-admin
                port:
                  number: 80
